# rust-seminar-20231103

./: Cargo.toml  README.md
examples/: 01_primitive.rs  05_ownership.rs  06_array_slice_vector.rs  07_char_ref_str_string.rs  README.md  box.rs  functional_programming.rs  option_result.rs  ownership.rs  struct.rs  tuple.rs
examples/module-sample/: Cargo.toml
examples/module-sample/src/: main.rs
examples/print-server/: Dockerfile  docker-compose.yml
examples/print-server/src/: main.rs
examples/test-sample/tests/: integration_test.rs
projects/: README.md
projects/modern-error-handling/: Cargo.toml
projects/modern-error-handling/src/: main.rs
projects/module-sample/src/: module_a.rs  module_b.rs
projects/print-server/: Cargo.toml  README.md
projects/print-server/src/: main.rs
projects/simple-tcp-echo-server/: Cargo.toml
projects/simple-tcp-echo-server/src/: main.rs
projects/static-text-hard-coded/: Cargo.toml
projects/static-text-hard-coded/src/: main.rs
projects/test-sample/: Cargo.toml
texts/: Cargo.toml  TEXT.md
texts/docs/: TEXT.md  lifetime.md  ownership.md  self_introduce.md  threads.md
texts/examples/: 01_primitive.rs  03_struct.rs  04_enum.rs  05_ownership.rs  box.rs  closure.rs  error_handling_1.rs  error_handling_2.rs  functional_programming.rs  lifetime_01.rs  lifetime_03.rs  lifetime_04.rs  lifetime_05.rs  reference.rs  thread_1.rs  thread_5.rs  thread_6.rs  trait.rs  trait_1.rs  trait_2.rs
texts/markdown/: async.md  crate.md  index.md  lifetime.md  macro.md  reference_and_borrow.md  rust.md  self_introduce.md  threads.md
(+3 files in other folders)
