[package]
name = "print-server"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
tracer = []

[dependencies]
axum = "0.6.16"
axum-core = "0.3.4"
http = "0.2.9"
hyper = { version = "0.14", features = ["full"] }
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19.0", features = ["collector_client", "isahc_collector_client", "rt-tokio"]}
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "filter"] }
tracing = "0.1"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
